--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,33 +2,36 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
   workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: "Checkout"
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+      - name: "Checkout"
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Add Version Tag
+        uses: juliansangillo/tag-version@v1.5
+        with:
+          production-branch: master
+          test-branch: test
+          dev-branch: develop
 
-    - name: Add Version Tag
-      uses: juliansangillo/tag-version@v1.5
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v3.3.0
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        run: "echo Pushing ${{ github.event.repository.name }}:${{ steps.vars.outputs.revision }}"
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:latest, ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ steps.vars.outputs.revision }}
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v3.3.0
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          run: "echo Pushing ${{ github.event.repository.name }}:${{ steps.vars.outputs.revision }}"
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:latest, ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ steps.vars.outputs.revision }}
