--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Add Version Tag
-        run: ./scripts/tag-version.sh
+        run: ./scripts/tag-version.sh master test develop
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
